@@ -1,3 +1,7 @@
+2010-06-26  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.dg/tree-ssa/ipa-split-2.c: New testcase.
+
 2010-06-26  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/44674
